--- a/index.html
+++ b/index.html
@@ -1260,6 +1260,49 @@ input[type="radio"].radio, .radio{ width:16px; height:16px; border:var(--border)
 
 
 
+
+<!-- Added: professional admin badge styling -->
+
+
+
+<style id="admin-badge-pro-style">
+h2 .auth-status-badge {
+  margin-left: auto;
+  display: inline-flex;
+  align-items: center;
+  gap: 3px;
+  padding: 1px 6px;
+  border-radius: 6px;
+  background: transparent;
+  border: 1px solid #d5d5d5;
+  color: #555;
+  font-weight: 500;
+  font-size: 0.72em;
+  height: 18px;
+  line-height: 1;
+}
+
+h2 .auth-status-badge .dot {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+}
+
+h2 .auth-status-badge.admin .dot { background: #23b65b; }
+h2 .auth-status-badge.user  .dot { background: #2f81f7; }
+h2 .auth-status-badge.offline .dot { background: #999; }
+
+@media (max-width: 640px) {
+  h2 .auth-status-badge {
+    font-size: 0.68em;
+    padding: 1px 5px;
+    height: 16px;
+  }
+}
+</style>
+
+
+
 </head>
 <body class="density-compact">
 
@@ -1269,7 +1312,8 @@ input[type="radio"].radio, .radio{ width:16px; height:16px; border:var(--border)
             <h2>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                 ค้นหาสินค้า
-            </h2>
+                <div id="auth-status" class="auth-status-badge" aria-live="polite" title="สถานะผู้ใช้" role="status"><span class="dot"></span><span>ยังไม่ได้เข้าสู่ระบบ</span></div>
+</h2>
             <div class="form-group">
                 <input type="text" id="barcode-input" placeholder="ค้นหา... (เช่น: 1234.)" data-base-placeholder="ค้นหาสินค้า...">
             </div>
@@ -1299,7 +1343,10 @@ input[type="radio"].radio, .radio{ width:16px; height:16px; border:var(--border)
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                     </button>
                 </div>
-<div class="cart-utility" role="group" aria-label="Cart utilities"><aside id="app-sidebar">
+<div class="cart-utility" role="group" aria-label="Cart utilities">
+    <!-- moved: manage-products-btn (moved here by script) -->
+    <button class="btn-manage" type="button" id="manage-products-btn" style="background-color: var(--info-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg> จัดการสินค้า </button>
+<aside id="app-sidebar">
                     <button class="sidebar-btn" data-view="history" title="ประวัติ (F5)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 4v6h6"></path><path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path></svg>
                         <span>ประวัติ</span>
@@ -1319,7 +1366,7 @@ input[type="radio"].radio, .radio{ width:16px; height:16px; border:var(--border)
     
                 </aside>
                 
-<div id="auth-status" class="auth-status-badge" aria-live="polite" title="สถานะผู้ใช้" role="status"><span class="dot"></span><span>ยังไม่ได้เข้าสู่ระบบ</span></div></div>
+</div>
             </div>
             <div id="edit-status" style="display: none; padding: 10px; background-color: #fff3cd; color: #856404; border-radius: 4px; margin-bottom: 1rem; margin-top:1rem;"></div>
             <div class="cart-header-row">
@@ -1377,7 +1424,7 @@ input[type="radio"].radio, .radio{ width:16px; height:16px; border:var(--border)
 <div id="history-product-count" class="summary-item" style="margin:0 0 1rem 0; display:none; text-align:left;" aria-live="polite"></div>
 </div>
 <div class="button-group" style="justify-content: flex-start; margin-bottom: 1rem; margin-top:0;"> <button type="button" id="export-excel-btn">Export to Excel</button> <button type="button" id="clear-all-history-btn" class="clear-cart" style="flex-grow: 0; margin-left: auto;">ล้างประวัติทั้งหมด</button> </div> <div id="history-table-wrapper"> <table id="history-table"> <thead><tr><th>วันที่/เวลา</th><th>รหัสการขาย</th><th>รายการสินค้า (จำนวน)</th><th>ส่วนลด</th><th>ยอดรวมสุทธิ</th><th>การกระทำ</th></tr></thead> <tbody id="history-body"></tbody> </table> </div> </section> </div> <div class="modal-footer"> <button type="button" class="close-main-modal-btn" style="background-color: var(--secondary-color);">ปิด</button> </div> </div> </div>
-<div id="settings-modal" class="modal-overlay"> <div class="modal-content"> <div class="modal-body"> <section class="card" style="height: 100%; box-shadow: none; border: none; padding: 0;"> <h2>การตั้งค่าและจัดการ</h2> <div class="button-group"> <button type="button" id="manage-products-btn" style="background-color: var(--info-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg> จัดการสินค้า </button> <button type="button" id="import-from-sheet-btn" style="background-color: var(--success-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg> นำเข้า/อัปเดตจาก Google Sheet </button> <button type="button" id="receipt-settings-btn" style="background-color: var(--secondary-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg> ตั้งค่าใบเสร็จ </button> </div> <div style="margin-top: 1rem; display: flex; align-items: center;"> <input type="checkbox" id="auto-import-toggle" style="width: auto; margin-right: 0.5rem;" checked> <label for="auto-import-toggle">นำเข้าข้อมูลอัตโนมัติเมื่อมีการเปลี่ยนแปลง (ตรวจสอบทุก 5 นาที)</label> </div> </section> </div> <div class="modal-footer"> <button type="button" class="close-main-modal-btn" style="background-color: var(--secondary-color);">ปิด</button> </div> </div> </div>
+<div id="settings-modal" class="modal-overlay"> <div class="modal-content"> <div class="modal-body"> <section class="card" style="height: 100%; box-shadow: none; border: none; padding: 0;"> <h2>การตั้งค่าและจัดการ</h2> <div class="button-group">  <button type="button" id="import-from-sheet-btn" style="background-color: var(--success-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg> นำเข้า/อัปเดตจาก Google Sheet </button> <button type="button" id="receipt-settings-btn" style="background-color: var(--secondary-color);"> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg> ตั้งค่าใบเสร็จ </button> </div> <div style="margin-top: 1rem; display: flex; align-items: center;"> <input type="checkbox" id="auto-import-toggle" style="width: auto; margin-right: 0.5rem;" checked> <label for="auto-import-toggle">นำเข้าข้อมูลอัตโนมัติเมื่อมีการเปลี่ยนแปลง (ตรวจสอบทุก 5 นาที)</label> </div> </section> </div> <div class="modal-footer"> <button type="button" class="close-main-modal-btn" style="background-color: var(--secondary-color);">ปิด</button> </div> </div> </div>
 <div id="receipt-settings-modal" class="modal-overlay"> <div class="modal-content"> <div class="modal-header"> <h3>ตั้งค่าข้อมูลใบเสร็จ</h3> </div> <div class="modal-body"> <div class="form-group"> <label for="receipt-store-name">ชื่อร้านค้า</label> <input type="text" id="receipt-store-name" placeholder="ระบุชื่อร้านค้าของคุณ"> </div> <div class="form-group"> <label for="receipt-address">ที่อยู่</label> <input type="text" id="receipt-address" placeholder="เช่น 123/45 ถนน ABC, แขวง/ตำบล XYZ..."> </div> <div class="form-group"> <label for="receipt-phone">เบอร์โทรศัพท์</label> <input type="text" id="receipt-phone" placeholder="เช่น 02-123-4567"> </div> <div class="form-group"> <label for="receipt-tax-id">เลขประจำตัวผู้เสียภาษี</label> <input type="text" id="receipt-tax-id" placeholder="ระบุเลข 13 หลัก"> </div> </div> <div class="modal-footer"> <div class="button-group"> <button type="button" id="cancel-receipt-settings-btn" style="background-color:var(--secondary-color)">ยกเลิก</button> <button type="button" id="save-receipt-settings-btn" class="finish-sale">บันทึก</button> </div> </div> </div> </div>
 <div id="payment-modal" class="modal-overlay"> <div class="modal-content"> <div class="modal-header"><h3>ชำระเงิน</h3></div> <div class="modal-body"> <div class="payment-modal-body"> <div class="payment-row"><span class="payment-label">ยอดสุทธิ</span><span class="payment-amount" id="payment-total-final">0.00</span></div> <div class="payment-row"><label for="cash-received-input" class="payment-label">รับเงินมา</label><input type="number" id="cash-received-input" step="any" placeholder="0.00"></div> <div class="payment-row"><span class="payment-label">เงินทอน</span><span class="payment-amount" id="payment-change">0.00</span></div> </div> </div> <div class="modal-footer"> <div class="button-group"> <button type="button" id="cancel-payment-btn" style="background-color:var(--secondary-color)">ยกเลิก (ESC)</button> <button type="button" id="confirm-sale-btn" class="finish-sale">ยืนยันการขาย (Enter)</button> </div> </div> </div> </div>
 <div id="delete-confirm-modal" class="modal-overlay"> <div class="modal-content"> <div class="modal-header"><h3 style="color:var(--danger-color)">ยืนยันการลบ</h3></div> <div class="modal-body"><p id="delete-confirm-text"></p></div> <div class="modal-footer"> <div class="button-group"> <button type="button" id="cancel-delete-btn" style="background-color:var(--secondary-color)">ยกเลิก</button> <button type="button" id="confirm-delete-btn" class="clear-cart">ยืนยันการลบ</button> </div> </div> </div> </div>
@@ -4332,11 +4379,3 @@ document.addEventListener('keydown', (e) => {
   }
 })();
 </script>
-
-
-
-
-
-
-
-
