--- a/index.html
+++ b/index.html
@@ -1462,14 +1462,14 @@ h2 .auth-status-badge.offline .dot { background: #999; }
     } else {
         console.warn("Firebase config not found in environment. Using local fallback. PLEASE REPLACE PLACEHOLDER VALUES.");
         firebaseConfig = {
-  apiKey: "AIzaSyCBGek-Xl3uuPnS0Qv2O86HOz819VlsspI",
-  authDomain: "pos12-91ebd.firebaseapp.com",
-  projectId: "pos12-91ebd",
-  storageBucket: "pos12-91ebd.firebasestorage.app",
-  messagingSenderId: "889126754372",
-  appId: "1:889126754372:web:c0738116e7cc5daeaec411",
-  measurementId: "G-RTDHC58EJM"
-        };
+  apiKey: "AIzaSyCCxaeyBfhxBaesLcZwIDiPQLZA2yIoOG4",
+  authDomain: "pos-13.firebaseapp.com",
+  projectId: "pos-13",
+  storageBucket: "pos-13.firebasestorage.app",
+  messagingSenderId: "130424170040",
+  appId: "1:130424170040:web:9a1cc32654bfbdf56028cd",
+  measurementId: "G-6W43FD2K5H"
+};
     }
 
     try {
